import {typescriptEslintParser} from '../scripts/parsers.js';
import {getTester, parsers} from './utils/test.js';

const {test} = getTester(import.meta);

const typeAware = code => ({
	code,
	filename: 'file.ts',
	languageOptions: {
		parser: typescriptEslintParser,
		parserOptions: {projectService: {allowDefaultProject: ['*.ts']}},
	},
});

test.snapshot({
	valid: [
		'style.setProperty("bacKgroundColor", "red")',
		'style.setProperty("*backgroundColor", "red")',
		'style.setProperty("_backgroundColor", "red")',
		'style.setProperty("webkitColor", "red")',
		'style.setProperty("webkitBackgroundColor", "red")',
		'style.setProperty("WebkitStrokeWidth", "2px")',
		'style.setProperty("color", value, "!important"); const value = "red";',

		'style.setProperty("background-color", "red")',
		'style.setProperty("bAcKgRoUnD-cOlOr", "red")',
		'style.setProperty("cOlOr", "red")',
		'style.setProperty("--brandColor", "red")',
		'style.setProperty("--BrandColor", "red")',
		'style.setProperty("futureProperty", "red")',
		'style.setProperty("-webkit-transform", "none")',
		'style.setProperty("unknown-property", "red")',
		'style.setProperty("color", "red", "IMPORTANT")',
		'style.setProperty("color", "red", "")',
		'style.setProperty("color", "red", null)',
		'style.setProperty("color", "red", undefined)',
		'style.setProperty("color", "red", priority)',
		'style.setProperty("color", value, "!important")',
		'style.setProperty("color", "", "!important")',
		'style.setProperty("color", null, false)',
		'const value = ""; style.setProperty("color", value, "invalid")',
		'const value = null; style.setProperty("color", value, "invalid")',
		'let value = "red"; value = ""; style.setProperty("color", value, "invalid")',
		'style.setProperty("content", \'"!important"\')',
		'style.setProperty("content", "\'!important\'")',
		String.raw`style.setProperty('content', '"\\\"!important"')`,
		'style.setProperty("color", "/* !important */ red")',
		'style.setProperty("background-image", "url(data:text/plain,!important)")',
		'style.setProperty("background-image", \'url("!important")\')',
		'style.setProperty("--tokens", "var(--other, !important)")',
		'style.setProperty("--tokens", "( !important )")',
		'style.setProperty("--tokens", "[ !important ]")',
		'style.setProperty("--tokens", "{ !important }")',
		String.raw`style.setProperty('--tokens', '\\!important')`,
		'style.setProperty("--tokens", "!importantish")',
		'style.setProperty("--tokens", "! important()")',
		// eslint-disable-next-line no-template-curly-in-string
		'style.setProperty("color", `${value} !important`)',
		'style.setProperty("color", value)',
		'style.setProperty("color", {}, "!important")',
		'style.setProperty("color", "red", {})',
		'style.setProperty("color", "red", Symbol())',
		'const values = {color: "red !important"}; values.color = "red"; style.setProperty("color", values.color)',
		'let value = "red !important"; value = "red"; style.setProperty("color", value)',
		'style.setProperty("backgroundColor")',
		'style.setProperty()',
		'style["setProperty"]("backgroundColor", "red")',
		'setProperty("backgroundColor", "red")',
		'other.setProperty("backgroundColor", "red")',
		'const style = {setProperty() {}}; style.setProperty("backgroundColor", "red")',
		'const style = []; style.setProperty("backgroundColor", "red")',
		'const style = "foo"; style.setProperty("backgroundColor", "red")',
		'const style = undefined; style?.setProperty("color", "red", "bad")',
		'const style = null; style?.setProperty("backgroundColor", "red")',
		'style.setProperty(...properties, "red !important")',
		'style.setProperty("backgroundColor", ...values)',
		'style.setProperty("backgroundColor", "red !important", ...priorities)',
		'style.setProperty("color", "red", "important", "!important")',
		{code: 'declare const style: {setProperty: Function}; style.setProperty("backgroundColor", "red")', languageOptions: {parser: parsers.typescript}},
		typeAware('const style = {setProperty() {}}; style.setProperty("backgroundColor", "red");'),
		typeAware('declare const style: CSSStyleDeclaration | {setProperty: Function}; style.setProperty("backgroundColor", "red");'),
		typeAware('declare const object: {style: {setProperty: Function}}; object.style.setProperty("backgroundColor", "red");'),
	],
	invalid: [
		'style.setProperty("backgroundColor", "red")',
		'style.setProperty("strokeWidth", "2px")',
		'style.setProperty("cssFloat", "left")',
		'style.setProperty("webkitTransform", "none")',
		'style.setProperty("WebkitTransform", "none")',
		'style.setProperty("MozAppearance", "none")',
		'style.setProperty("backgroundColor", "", "invalid")',
		'element.style.setProperty("backgroundColor", "red")',
		'(element.style).setProperty("backgroundColor", "red")',
		'element?.style?.setProperty?.("backgroundColor", "red")',
		'style.setProperty("backgroundColor", "red", "important", ...extra)',
		'style.setProperty(`backgroundColor`, `red`)',
		'const property = "backgroundColor"; style.setProperty(property, "red")',
		'style.setProperty("background" + "Color", "red")',
		'style.setProperty("color", "red !important")',
		'style.setProperty("color", "red ! IMPORTANT")',
		'style.setProperty("color", "red !/**/important")',
		String.raw`style.setProperty('color', 'red !\\69mportant')`,
		'style.setProperty("--tokens", "red !important blue")',
		'style.setProperty("--tokens", "red !important !important")',
		'style.setProperty("--tokens", "var(--other, !important) !important")',
		'style.setProperty("content", \'"!important" !important\')',
		'style.setProperty("color", "/* keep */ red !important")',
		'style.setProperty("color", "red !important /* keep */")',
		'style.setProperty("color", "!important")',
		'style.setProperty("color", "red !important", "")',
		'style.setProperty("color", "red !important", null)',
		'style.setProperty("color", "red !important", undefined)',
		'style.setProperty("color", "red !important", "IMPORTANT")',
		'style.setProperty("color", "red !important", priority)',
		'const priority = ""; style.setProperty("color", "red !important", priority)',
		'const value = "red !important"; style.setProperty("color", value)',
		'style.setProperty("color", `red !important`)',
		'style.setProperty("color", "red !important",)',
		'style.setProperty("color", /* keep */ "red !important" /* keep */)',
		'if (enabled) {\r\n  style.setProperty("color", "red !important",);\r\n}',
		'style.setProperty("color", "red", "!important")',
		'style.setProperty("color", "red", " important ")',
		'style.setProperty("color", "red", " ! IMPORTANT ")',
		'style.setProperty("color", "red", false)',
		'style.setProperty("color", "red", true)',
		'style.setProperty("color", "red", 1n)',
		String.raw`style.setProperty("color", "red", "important\n")`,
		{code: '<div>{style.setProperty("color", "red !important")}</div>', languageOptions: {parserOptions: {ecmaFeatures: {jsx: true}}}},
		'style.setProperty("color", "red", 0)',
		'style.setProperty("color", "red", "urgent")',
		'style.setProperty("opacity", 0, "!important")',
		'style.setProperty("color", undefined, "!important")',
		'const value = "red"; const priority = "!important"; style.setProperty("color", value, priority)',
		'style.setProperty("color", "red", `!important`)',
		'style.setProperty("backgroundColor", "red !important", "!important")',
		{code: 'style.setProperty("backgroundColor" as string, "red !important" satisfies string, "" as string)', languageOptions: {parser: parsers.typescript}},
		{code: '(<CSSStyleDeclaration>declaration).setProperty("backgroundColor", <string>"red !important")', languageOptions: {parser: parsers.typescript}},
		{code: 'declare const declaration: CSSStyleDeclaration; declaration.setProperty("backgroundColor", "red")', languageOptions: {parser: parsers.typescript}},
		{code: 'declare const style: CSSStyleDeclaration | undefined; style?.setProperty("color", ("red !important")!)', languageOptions: {parser: parsers.typescript}},
		typeAware('document.body.style.setProperty("backgroundColor", "red");'),
		typeAware('const declaration = document.body.style; declaration.setProperty("color", "red !important");'),
		typeAware('declare const declaration: CSSStyleProperties; declaration.setProperty("color", "red", "!important");'),
		typeAware('declare const declaration: CSSStyleDeclaration | CSSStyleProperties | undefined; declaration?.setProperty("backgroundColor", "red");'),
		'style.setProperty("webkitFlexDirection", "row")',
		'style.setProperty("WebkitTransitionProperty", "color")',
		'style.setProperty("webkitMaskBoxImageOutset", "0")',
		'style.setProperty("color", "red !important", (/* keep */ ""))',
		'style.setProperty("--tokens", "red/* keep */ !important")',
	],
});

test({
	valid: [],
	invalid: [
		{
			code: 'style.setProperty("color", "red !important")',
			errors: [{
				messageId: 'no-invalid-style-set-property/value',
				suggestions: [{messageId: 'no-invalid-style-set-property/move-important', output: 'style.setProperty("color", \'red\', \'important\')'}],
			}],
		},
		{
			code: 'style.setProperty("color", "red !important", priority)',
			errors: [{messageId: 'no-invalid-style-set-property/value', suggestions: []}],
		},
		{
			code: 'const value = "red !important"; style.setProperty("color", value)',
			errors: [{messageId: 'no-invalid-style-set-property/value', suggestions: []}],
		},
		{
			code: 'style.setProperty("color", "red", false)',
			errors: [{messageId: 'no-invalid-style-set-property/priority', suggestions: []}],
		},
	],
});

test({
	valid: [],
	invalid: [
		{
			code: String.raw`style.setProperty('--tokens', 'foo\\ !important')`,
			errors: [{
				messageId: 'no-invalid-style-set-property/value',
				suggestions: [{messageId: 'no-invalid-style-set-property/move-important', output: String.raw`style.setProperty('--tokens', 'foo\\ ', 'important')`}],
			}],
		},
		{
			code: 'style.setProperty("--tokens", " \t !important")',
			errors: [{messageId: 'no-invalid-style-set-property/value', suggestions: []}],
		},
		{
			code: 'function update(undefined) { style.setProperty("color", "red !important", undefined); }',
			errors: [{messageId: 'no-invalid-style-set-property/value', suggestions: []}],
		},
	],
});

for (const [code, output] of [
	[String.raw`style.setProperty('--tokens', 'foo\\\t!important')`, String.raw`style.setProperty('--tokens', 'foo\\\t', 'important')`],
	[String.raw`style.setProperty('--tokens', 'foo\\31 !important')`, String.raw`style.setProperty('--tokens', 'foo\\31 ', 'important')`],
]) {
	test({
		valid: [],
		invalid: [{
			code,
			errors: [{
				messageId: 'no-invalid-style-set-property/value',
				suggestions: [{messageId: 'no-invalid-style-set-property/move-important', output}],
			}],
		}],
	});
}
