exports[`no-invalid-style-set-property > invalid(1): style.setProperty(\"backgroundColor\", \"red\") 1`] = `

  1 | style.setProperty("backgroundColor", "red")

`;

exports[`no-invalid-style-set-property > invalid(1): style.setProperty(\"backgroundColor\", \"red\") 2`] = `

Message:
> 1 | style.setProperty("backgroundColor", "red")
    |                   ^^^^^^^^^^^^^^^^^ Use the CSS property name \`background-color\` instead of \`backgroundColor\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`background-color\`.:
  1 | style.setProperty('background-color', "red")

`;

exports[`no-invalid-style-set-property > invalid(10): element?.style?.setProperty?.(\"backgroundColor\", \"red\") 1`] = `

  1 | element?.style?.setProperty?.("backgroundColor", "red")

`;

exports[`no-invalid-style-set-property > invalid(10): element?.style?.setProperty?.(\"backgroundColor\", \"red\") 2`] = `

Message:
> 1 | element?.style?.setProperty?.("backgroundColor", "red")
    |                               ^^^^^^^^^^^^^^^^^ Use the CSS property name \`background-color\` instead of \`backgroundColor\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`background-color\`.:
  1 | element?.style?.setProperty?.('background-color', "red")

`;

exports[`no-invalid-style-set-property > invalid(11): style.setProperty(\"backgroundColor\", \"red\", \"important\", ...extra) 1`] = `

  1 | style.setProperty("backgroundColor", "red", "important", ...extra)

`;

exports[`no-invalid-style-set-property > invalid(11): style.setProperty(\"backgroundColor\", \"red\", \"important\", ...extra) 2`] = `

Message:
> 1 | style.setProperty("backgroundColor", "red", "important", ...extra)
    |                   ^^^^^^^^^^^^^^^^^ Use the CSS property name \`background-color\` instead of \`backgroundColor\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`background-color\`.:
  1 | style.setProperty('background-color', "red", "important", ...extra)

`;

exports[`no-invalid-style-set-property > invalid(12): style.setProperty(\`backgroundColor\`, \`red\`) 1`] = `

  1 | style.setProperty(\`backgroundColor\`, \`red\`)

`;

exports[`no-invalid-style-set-property > invalid(12): style.setProperty(\`backgroundColor\`, \`red\`) 2`] = `

Message:
> 1 | style.setProperty(\`backgroundColor\`, \`red\`)
    |                   ^^^^^^^^^^^^^^^^^ Use the CSS property name \`background-color\` instead of \`backgroundColor\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`background-color\`.:
  1 | style.setProperty('background-color', \`red\`)

`;

exports[`no-invalid-style-set-property > invalid(13): const property = \"backgroundColor\"; style.setProperty(property, \"red\") 1`] = `

  1 | const property = "backgroundColor"; style.setProperty(property, "red")

`;

exports[`no-invalid-style-set-property > invalid(13): const property = \"backgroundColor\"; style.setProperty(property, \"red\") 2`] = `

Message:
> 1 | const property = "backgroundColor"; style.setProperty(property, "red")
    |                                                       ^^^^^^^^ Use the CSS property name \`background-color\` instead of \`backgroundColor\` in \`setProperty()\`.

`;

exports[`no-invalid-style-set-property > invalid(14): style.setProperty(\"background\" + \"Color\", \"red\") 1`] = `

  1 | style.setProperty("background" + "Color", "red")

`;

exports[`no-invalid-style-set-property > invalid(14): style.setProperty(\"background\" + \"Color\", \"red\") 2`] = `

Message:
> 1 | style.setProperty("background" + "Color", "red")
    |                   ^^^^^^^^^^^^^^^^^^^^^^ Use the CSS property name \`background-color\` instead of \`backgroundColor\` in \`setProperty()\`.

`;

exports[`no-invalid-style-set-property > invalid(15): style.setProperty(\"color\", \"red !important\") 1`] = `

  1 | style.setProperty("color", "red !important")

`;

exports[`no-invalid-style-set-property > invalid(15): style.setProperty(\"color\", \"red !important\") 2`] = `

Message:
> 1 | style.setProperty("color", "red !important")
    |                            ^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | style.setProperty("color", 'red', 'important')

`;

exports[`no-invalid-style-set-property > invalid(16): style.setProperty(\"color\", \"red ! IMPORTANT\") 1`] = `

  1 | style.setProperty("color", "red ! IMPORTANT")

`;

exports[`no-invalid-style-set-property > invalid(16): style.setProperty(\"color\", \"red ! IMPORTANT\") 2`] = `

Message:
> 1 | style.setProperty("color", "red ! IMPORTANT")
    |                            ^^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | style.setProperty("color", 'red', 'important')

`;

exports[`no-invalid-style-set-property > invalid(17): style.setProperty(\"color\", \"red !/**/important\") 1`] = `

  1 | style.setProperty("color", "red !/**/important")

`;

exports[`no-invalid-style-set-property > invalid(17): style.setProperty(\"color\", \"red !/**/important\") 2`] = `

Message:
> 1 | style.setProperty("color", "red !/**/important")
    |                            ^^^^^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

`;

exports[`no-invalid-style-set-property > invalid(18): style.setProperty('color', 'red !\\\\69mportant') 1`] = `

  1 | style.setProperty('color', 'red !\\\\69mportant')

`;

exports[`no-invalid-style-set-property > invalid(18): style.setProperty('color', 'red !\\\\69mportant') 2`] = `

Message:
> 1 | style.setProperty('color', 'red !\\\\69mportant')
    |                            ^^^^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | style.setProperty('color', 'red', 'important')

`;

exports[`no-invalid-style-set-property > invalid(19): style.setProperty(\"--tokens\", \"red !important blue\") 1`] = `

  1 | style.setProperty("--tokens", "red !important blue")

`;

exports[`no-invalid-style-set-property > invalid(19): style.setProperty(\"--tokens\", \"red !important blue\") 2`] = `

Message:
> 1 | style.setProperty("--tokens", "red !important blue")
    |                               ^^^^^^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

`;

exports[`no-invalid-style-set-property > invalid(2): style.setProperty(\"strokeWidth\", \"2px\") 1`] = `

  1 | style.setProperty("strokeWidth", "2px")

`;

exports[`no-invalid-style-set-property > invalid(2): style.setProperty(\"strokeWidth\", \"2px\") 2`] = `

Message:
> 1 | style.setProperty("strokeWidth", "2px")
    |                   ^^^^^^^^^^^^^ Use the CSS property name \`stroke-width\` instead of \`strokeWidth\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`stroke-width\`.:
  1 | style.setProperty('stroke-width', "2px")

`;

exports[`no-invalid-style-set-property > invalid(20): style.setProperty(\"--tokens\", \"red !important !important\") 1`] = `

  1 | style.setProperty("--tokens", "red !important !important")

`;

exports[`no-invalid-style-set-property > invalid(20): style.setProperty(\"--tokens\", \"red !important !important\") 2`] = `

Message:
> 1 | style.setProperty("--tokens", "red !important !important")
    |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

`;

exports[`no-invalid-style-set-property > invalid(21): style.setProperty(\"--tokens\", \"var(--other, !important) !important\") 1`] = `

  1 | style.setProperty("--tokens", "var(--other, !important) !important")

`;

exports[`no-invalid-style-set-property > invalid(21): style.setProperty(\"--tokens\", \"var(--other, !important) !important\") 2`] = `

Message:
> 1 | style.setProperty("--tokens", "var(--other, !important) !important")
    |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | style.setProperty("--tokens", 'var(--other, !important)', 'important')

`;

exports[`no-invalid-style-set-property > invalid(22): style.setProperty(\"content\", '\"!important\" !important') 1`] = `

  1 | style.setProperty("content", '"!important" !important')

`;

exports[`no-invalid-style-set-property > invalid(22): style.setProperty(\"content\", '\"!important\" !important') 2`] = `

Message:
> 1 | style.setProperty("content", '"!important" !important')
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | style.setProperty("content", '"!important"', 'important')

`;

exports[`no-invalid-style-set-property > invalid(23): style.setProperty(\"color\", \"/* keep */ red !important\") 1`] = `

  1 | style.setProperty("color", "/* keep */ red !important")

`;

exports[`no-invalid-style-set-property > invalid(23): style.setProperty(\"color\", \"/* keep */ red !important\") 2`] = `

Message:
> 1 | style.setProperty("color", "/* keep */ red !important")
    |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | style.setProperty("color", '/* keep */ red', 'important')

`;

exports[`no-invalid-style-set-property > invalid(24): style.setProperty(\"color\", \"red !important /* keep */\") 1`] = `

  1 | style.setProperty("color", "red !important /* keep */")

`;

exports[`no-invalid-style-set-property > invalid(24): style.setProperty(\"color\", \"red !important /* keep */\") 2`] = `

Message:
> 1 | style.setProperty("color", "red !important /* keep */")
    |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

`;

exports[`no-invalid-style-set-property > invalid(25): style.setProperty(\"color\", \"!important\") 1`] = `

  1 | style.setProperty("color", "!important")

`;

exports[`no-invalid-style-set-property > invalid(25): style.setProperty(\"color\", \"!important\") 2`] = `

Message:
> 1 | style.setProperty("color", "!important")
    |                            ^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

`;

exports[`no-invalid-style-set-property > invalid(26): style.setProperty(\"color\", \"red !important\", \"\") 1`] = `

  1 | style.setProperty("color", "red !important", "")

`;

exports[`no-invalid-style-set-property > invalid(26): style.setProperty(\"color\", \"red !important\", \"\") 2`] = `

Message:
> 1 | style.setProperty("color", "red !important", "")
    |                            ^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | style.setProperty("color", 'red', 'important')

`;

exports[`no-invalid-style-set-property > invalid(27): style.setProperty(\"color\", \"red !important\", null) 1`] = `

  1 | style.setProperty("color", "red !important", null)

`;

exports[`no-invalid-style-set-property > invalid(27): style.setProperty(\"color\", \"red !important\", null) 2`] = `

Message:
> 1 | style.setProperty("color", "red !important", null)
    |                            ^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | style.setProperty("color", 'red', 'important')

`;

exports[`no-invalid-style-set-property > invalid(28): style.setProperty(\"color\", \"red !important\", undefined) 1`] = `

  1 | style.setProperty("color", "red !important", undefined)

`;

exports[`no-invalid-style-set-property > invalid(28): style.setProperty(\"color\", \"red !important\", undefined) 2`] = `

Message:
> 1 | style.setProperty("color", "red !important", undefined)
    |                            ^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | style.setProperty("color", 'red', 'important')

`;

exports[`no-invalid-style-set-property > invalid(29): style.setProperty(\"color\", \"red !important\", \"IMPORTANT\") 1`] = `

  1 | style.setProperty("color", "red !important", "IMPORTANT")

`;

exports[`no-invalid-style-set-property > invalid(29): style.setProperty(\"color\", \"red !important\", \"IMPORTANT\") 2`] = `

Message:
> 1 | style.setProperty("color", "red !important", "IMPORTANT")
    |                            ^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | style.setProperty("color", 'red', 'important')

`;

exports[`no-invalid-style-set-property > invalid(3): style.setProperty(\"cssFloat\", \"left\") 1`] = `

  1 | style.setProperty("cssFloat", "left")

`;

exports[`no-invalid-style-set-property > invalid(3): style.setProperty(\"cssFloat\", \"left\") 2`] = `

Message:
> 1 | style.setProperty("cssFloat", "left")
    |                   ^^^^^^^^^^ Use the CSS property name \`float\` instead of \`cssFloat\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`float\`.:
  1 | style.setProperty('float', "left")

`;

exports[`no-invalid-style-set-property > invalid(30): style.setProperty(\"color\", \"red !important\", priority) 1`] = `

  1 | style.setProperty("color", "red !important", priority)

`;

exports[`no-invalid-style-set-property > invalid(30): style.setProperty(\"color\", \"red !important\", priority) 2`] = `

Message:
> 1 | style.setProperty("color", "red !important", priority)
    |                            ^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

`;

exports[`no-invalid-style-set-property > invalid(31): const priority = \"\"; style.setProperty(\"color\", \"red !important\", priority) 1`] = `

  1 | const priority = ""; style.setProperty("color", "red !important", priority)

`;

exports[`no-invalid-style-set-property > invalid(31): const priority = \"\"; style.setProperty(\"color\", \"red !important\", priority) 2`] = `

Message:
> 1 | const priority = ""; style.setProperty("color", "red !important", priority)
    |                                                 ^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

`;

exports[`no-invalid-style-set-property > invalid(32): const value = \"red !important\"; style.setProperty(\"color\", value) 1`] = `

  1 | const value = "red !important"; style.setProperty("color", value)

`;

exports[`no-invalid-style-set-property > invalid(32): const value = \"red !important\"; style.setProperty(\"color\", value) 2`] = `

Message:
> 1 | const value = "red !important"; style.setProperty("color", value)
    |                                                            ^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

`;

exports[`no-invalid-style-set-property > invalid(33): style.setProperty(\"color\", \`red !important\`) 1`] = `

  1 | style.setProperty("color", \`red !important\`)

`;

exports[`no-invalid-style-set-property > invalid(33): style.setProperty(\"color\", \`red !important\`) 2`] = `

Message:
> 1 | style.setProperty("color", \`red !important\`)
    |                            ^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | style.setProperty("color", 'red', 'important')

`;

exports[`no-invalid-style-set-property > invalid(34): style.setProperty(\"color\", \"red !important\",) 1`] = `

  1 | style.setProperty("color", "red !important",)

`;

exports[`no-invalid-style-set-property > invalid(34): style.setProperty(\"color\", \"red !important\",) 2`] = `

Message:
> 1 | style.setProperty("color", "red !important",)
    |                            ^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | style.setProperty("color", 'red', 'important',)

`;

exports[`no-invalid-style-set-property > invalid(35): style.setProperty(\"color\", /* keep */ \"red !important\" /* keep */) 1`] = `

  1 | style.setProperty("color", /* keep */ "red !important" /* keep */)

`;

exports[`no-invalid-style-set-property > invalid(35): style.setProperty(\"color\", /* keep */ \"red !important\" /* keep */) 2`] = `

Message:
> 1 | style.setProperty("color", /* keep */ "red !important" /* keep */)
    |                                       ^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | style.setProperty("color", /* keep */ 'red' /* keep */, 'important')

`;

exports[`no-invalid-style-set-property > invalid(36): if (enabled) {\r\n  style.setProperty(\"color\", \"red !important\",);\r\n} 1`] = `

  1 | if (enabled) {
  2 |   style.setProperty("color", "red !important",);
  3 | }

`;

exports[`no-invalid-style-set-property > invalid(36): if (enabled) {\r\n  style.setProperty(\"color\", \"red !important\",);\r\n} 2`] = `

Message:
  1 | if (enabled) {
> 2 |   style.setProperty("color", "red !important",);
    |                              ^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.
  3 | }

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | if (enabled) {
  2 |   style.setProperty("color", 'red', 'important',);
  3 | }

`;

exports[`no-invalid-style-set-property > invalid(37): style.setProperty(\"color\", \"red\", \"!important\") 1`] = `

  1 | style.setProperty("color", "red", "!important")

`;

exports[`no-invalid-style-set-property > invalid(37): style.setProperty(\"color\", \"red\", \"!important\") 2`] = `

Message:
> 1 | style.setProperty("color", "red", "!important")
    |                                   ^^^^^^^^^^^^ The \`setProperty()\` priority must be an empty string or \`important\` (case-insensitive).

Suggestion 1/1: Replace with \`important\`.:
  1 | style.setProperty("color", "red", 'important')

`;

exports[`no-invalid-style-set-property > invalid(38): style.setProperty(\"color\", \"red\", \" important \") 1`] = `

  1 | style.setProperty("color", "red", " important ")

`;

exports[`no-invalid-style-set-property > invalid(38): style.setProperty(\"color\", \"red\", \" important \") 2`] = `

Message:
> 1 | style.setProperty("color", "red", " important ")
    |                                   ^^^^^^^^^^^^^ The \`setProperty()\` priority must be an empty string or \`important\` (case-insensitive).

Suggestion 1/1: Replace with \`important\`.:
  1 | style.setProperty("color", "red", 'important')

`;

exports[`no-invalid-style-set-property > invalid(39): style.setProperty(\"color\", \"red\", \" ! IMPORTANT \") 1`] = `

  1 | style.setProperty("color", "red", " ! IMPORTANT ")

`;

exports[`no-invalid-style-set-property > invalid(39): style.setProperty(\"color\", \"red\", \" ! IMPORTANT \") 2`] = `

Message:
> 1 | style.setProperty("color", "red", " ! IMPORTANT ")
    |                                   ^^^^^^^^^^^^^^^ The \`setProperty()\` priority must be an empty string or \`important\` (case-insensitive).

Suggestion 1/1: Replace with \`important\`.:
  1 | style.setProperty("color", "red", 'important')

`;

exports[`no-invalid-style-set-property > invalid(4): style.setProperty(\"webkitTransform\", \"none\") 1`] = `

  1 | style.setProperty("webkitTransform", "none")

`;

exports[`no-invalid-style-set-property > invalid(4): style.setProperty(\"webkitTransform\", \"none\") 2`] = `

Message:
> 1 | style.setProperty("webkitTransform", "none")
    |                   ^^^^^^^^^^^^^^^^^ Use the CSS property name \`-webkit-transform\` instead of \`webkitTransform\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`-webkit-transform\`.:
  1 | style.setProperty('-webkit-transform', "none")

`;

exports[`no-invalid-style-set-property > invalid(40): style.setProperty(\"color\", \"red\", false) 1`] = `

  1 | style.setProperty("color", "red", false)

`;

exports[`no-invalid-style-set-property > invalid(40): style.setProperty(\"color\", \"red\", false) 2`] = `

Message:
> 1 | style.setProperty("color", "red", false)
    |                                   ^^^^^ The \`setProperty()\` priority must be an empty string or \`important\` (case-insensitive).

`;

exports[`no-invalid-style-set-property > invalid(41): style.setProperty(\"color\", \"red\", true) 1`] = `

  1 | style.setProperty("color", "red", true)

`;

exports[`no-invalid-style-set-property > invalid(41): style.setProperty(\"color\", \"red\", true) 2`] = `

Message:
> 1 | style.setProperty("color", "red", true)
    |                                   ^^^^ The \`setProperty()\` priority must be an empty string or \`important\` (case-insensitive).

`;

exports[`no-invalid-style-set-property > invalid(42): style.setProperty(\"color\", \"red\", 1n) 1`] = `

  1 | style.setProperty("color", "red", 1n)

`;

exports[`no-invalid-style-set-property > invalid(42): style.setProperty(\"color\", \"red\", 1n) 2`] = `

Message:
> 1 | style.setProperty("color", "red", 1n)
    |                                   ^^ The \`setProperty()\` priority must be an empty string or \`important\` (case-insensitive).

`;

exports[`no-invalid-style-set-property > invalid(43): style.setProperty(\"color\", \"red\", \"important\\n\") 1`] = `

  1 | style.setProperty("color", "red", "important\\n")

`;

exports[`no-invalid-style-set-property > invalid(43): style.setProperty(\"color\", \"red\", \"important\\n\") 2`] = `

Message:
> 1 | style.setProperty("color", "red", "important\\n")
    |                                   ^^^^^^^^^^^^^ The \`setProperty()\` priority must be an empty string or \`important\` (case-insensitive).

Suggestion 1/1: Replace with \`important\`.:
  1 | style.setProperty("color", "red", 'important')

`;

exports[`no-invalid-style-set-property > invalid(44): <div>{style.setProperty(\"color\", \"red !important\")}</div> 1`] = `

  1 | <div>{style.setProperty("color", "red !important")}</div>

`;

exports[`no-invalid-style-set-property > invalid(44): <div>{style.setProperty(\"color\", \"red !important\")}</div> 2`] = `

Message:
> 1 | <div>{style.setProperty("color", "red !important")}</div>
    |                                  ^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | <div>{style.setProperty("color", 'red', 'important')}</div>

`;

exports[`no-invalid-style-set-property > invalid(45): style.setProperty(\"color\", \"red\", 0) 1`] = `

  1 | style.setProperty("color", "red", 0)

`;

exports[`no-invalid-style-set-property > invalid(45): style.setProperty(\"color\", \"red\", 0) 2`] = `

Message:
> 1 | style.setProperty("color", "red", 0)
    |                                   ^ The \`setProperty()\` priority must be an empty string or \`important\` (case-insensitive).

`;

exports[`no-invalid-style-set-property > invalid(46): style.setProperty(\"color\", \"red\", \"urgent\") 1`] = `

  1 | style.setProperty("color", "red", "urgent")

`;

exports[`no-invalid-style-set-property > invalid(46): style.setProperty(\"color\", \"red\", \"urgent\") 2`] = `

Message:
> 1 | style.setProperty("color", "red", "urgent")
    |                                   ^^^^^^^^ The \`setProperty()\` priority must be an empty string or \`important\` (case-insensitive).

`;

exports[`no-invalid-style-set-property > invalid(47): style.setProperty(\"opacity\", 0, \"!important\") 1`] = `

  1 | style.setProperty("opacity", 0, "!important")

`;

exports[`no-invalid-style-set-property > invalid(47): style.setProperty(\"opacity\", 0, \"!important\") 2`] = `

Message:
> 1 | style.setProperty("opacity", 0, "!important")
    |                                 ^^^^^^^^^^^^ The \`setProperty()\` priority must be an empty string or \`important\` (case-insensitive).

Suggestion 1/1: Replace with \`important\`.:
  1 | style.setProperty("opacity", 0, 'important')

`;

exports[`no-invalid-style-set-property > invalid(48): style.setProperty(\"color\", undefined, \"!important\") 1`] = `

  1 | style.setProperty("color", undefined, "!important")

`;

exports[`no-invalid-style-set-property > invalid(48): style.setProperty(\"color\", undefined, \"!important\") 2`] = `

Message:
> 1 | style.setProperty("color", undefined, "!important")
    |                                       ^^^^^^^^^^^^ The \`setProperty()\` priority must be an empty string or \`important\` (case-insensitive).

Suggestion 1/1: Replace with \`important\`.:
  1 | style.setProperty("color", undefined, 'important')

`;

exports[`no-invalid-style-set-property > invalid(49): const value = \"red\"; const priority = \"!important\"; style.setProperty(\"color\", value, priority) 1`] = `

  1 | const value = "red"; const priority = "!important"; style.setProperty("color", value, priority)

`;

exports[`no-invalid-style-set-property > invalid(49): const value = \"red\"; const priority = \"!important\"; style.setProperty(\"color\", value, priority) 2`] = `

Message:
> 1 | const value = "red"; const priority = "!important"; style.setProperty("color", value, priority)
    |                                                                                       ^^^^^^^^ The \`setProperty()\` priority must be an empty string or \`important\` (case-insensitive).

`;

exports[`no-invalid-style-set-property > invalid(5): style.setProperty(\"WebkitTransform\", \"none\") 1`] = `

  1 | style.setProperty("WebkitTransform", "none")

`;

exports[`no-invalid-style-set-property > invalid(5): style.setProperty(\"WebkitTransform\", \"none\") 2`] = `

Message:
> 1 | style.setProperty("WebkitTransform", "none")
    |                   ^^^^^^^^^^^^^^^^^ Use the CSS property name \`-webkit-transform\` instead of \`WebkitTransform\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`-webkit-transform\`.:
  1 | style.setProperty('-webkit-transform', "none")

`;

exports[`no-invalid-style-set-property > invalid(50): style.setProperty(\"color\", \"red\", \`!important\`) 1`] = `

  1 | style.setProperty("color", "red", \`!important\`)

`;

exports[`no-invalid-style-set-property > invalid(50): style.setProperty(\"color\", \"red\", \`!important\`) 2`] = `

Message:
> 1 | style.setProperty("color", "red", \`!important\`)
    |                                   ^^^^^^^^^^^^ The \`setProperty()\` priority must be an empty string or \`important\` (case-insensitive).

Suggestion 1/1: Replace with \`important\`.:
  1 | style.setProperty("color", "red", 'important')

`;

exports[`no-invalid-style-set-property > invalid(51): style.setProperty(\"backgroundColor\", \"red !important\", \"!important\") 1`] = `

  1 | style.setProperty("backgroundColor", "red !important", "!important")

`;

exports[`no-invalid-style-set-property > invalid(51): style.setProperty(\"backgroundColor\", \"red !important\", \"!important\") 2`] = `

Message:
> 1 | style.setProperty("backgroundColor", "red !important", "!important")
    |                   ^^^^^^^^^^^^^^^^^ Use the CSS property name \`background-color\` instead of \`backgroundColor\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`background-color\`.:
  1 | style.setProperty('background-color', "red !important", "!important")

`;

exports[`no-invalid-style-set-property > invalid(51): style.setProperty(\"backgroundColor\", \"red !important\", \"!important\") 3`] = `

Message:
> 1 | style.setProperty("backgroundColor", "red !important", "!important")
    |                                      ^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

`;

exports[`no-invalid-style-set-property > invalid(51): style.setProperty(\"backgroundColor\", \"red !important\", \"!important\") 4`] = `

Message:
> 1 | style.setProperty("backgroundColor", "red !important", "!important")
    |                                                        ^^^^^^^^^^^^ The \`setProperty()\` priority must be an empty string or \`important\` (case-insensitive).

Suggestion 1/1: Replace with \`important\`.:
  1 | style.setProperty("backgroundColor", "red !important", 'important')

`;

exports[`no-invalid-style-set-property > invalid(52): style.setProperty(\"backgroundColor\" as string, \"red !important\" satisfies string, \"\" as string) 1`] = `

  1 | style.setProperty("backgroundColor" as string, "red !important" satisfies string, "" as string)

`;

exports[`no-invalid-style-set-property > invalid(52): style.setProperty(\"backgroundColor\" as string, \"red !important\" satisfies string, \"\" as string) 2`] = `

Message:
> 1 | style.setProperty("backgroundColor" as string, "red !important" satisfies string, "" as string)
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use the CSS property name \`background-color\` instead of \`backgroundColor\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`background-color\`.:
  1 | style.setProperty('background-color' as string, "red !important" satisfies string, "" as string)

`;

exports[`no-invalid-style-set-property > invalid(52): style.setProperty(\"backgroundColor\" as string, \"red !important\" satisfies string, \"\" as string) 3`] = `

Message:
> 1 | style.setProperty("backgroundColor" as string, "red !important" satisfies string, "" as string)
    |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | style.setProperty("backgroundColor" as string, 'red' satisfies string, 'important' as string)

`;

exports[`no-invalid-style-set-property > invalid(53): (<CSSStyleDeclaration>declaration).setProperty(\"backgroundColor\", <string>\"red !important\") 1`] = `

  1 | (<CSSStyleDeclaration>declaration).setProperty("backgroundColor", <string>"red !important")

`;

exports[`no-invalid-style-set-property > invalid(53): (<CSSStyleDeclaration>declaration).setProperty(\"backgroundColor\", <string>\"red !important\") 2`] = `

Message:
> 1 | (<CSSStyleDeclaration>declaration).setProperty("backgroundColor", <string>"red !important")
    |                                                ^^^^^^^^^^^^^^^^^ Use the CSS property name \`background-color\` instead of \`backgroundColor\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`background-color\`.:
  1 | (<CSSStyleDeclaration>declaration).setProperty('background-color', <string>"red !important")

`;

exports[`no-invalid-style-set-property > invalid(53): (<CSSStyleDeclaration>declaration).setProperty(\"backgroundColor\", <string>\"red !important\") 3`] = `

Message:
> 1 | (<CSSStyleDeclaration>declaration).setProperty("backgroundColor", <string>"red !important")
    |                                                                   ^^^^^^^^^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | (<CSSStyleDeclaration>declaration).setProperty("backgroundColor", <string>'red', 'important')

`;

exports[`no-invalid-style-set-property > invalid(54): declare const declaration: CSSStyleDeclaration; declaration.setProperty(\"backgroundColor\", \"red\") 1`] = `

  1 | declare const declaration: CSSStyleDeclaration; declaration.setProperty("backgroundColor", "red")

`;

exports[`no-invalid-style-set-property > invalid(54): declare const declaration: CSSStyleDeclaration; declaration.setProperty(\"backgroundColor\", \"red\") 2`] = `

Message:
> 1 | declare const declaration: CSSStyleDeclaration; declaration.setProperty("backgroundColor", "red")
    |                                                                         ^^^^^^^^^^^^^^^^^ Use the CSS property name \`background-color\` instead of \`backgroundColor\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`background-color\`.:
  1 | declare const declaration: CSSStyleDeclaration; declaration.setProperty('background-color', "red")

`;

exports[`no-invalid-style-set-property > invalid(55): declare const style: CSSStyleDeclaration | undefined; style?.setProperty(\"color\", (\"red !important\")!) 1`] = `

  1 | declare const style: CSSStyleDeclaration | undefined; style?.setProperty("color", ("red !important")!)

`;

exports[`no-invalid-style-set-property > invalid(55): declare const style: CSSStyleDeclaration | undefined; style?.setProperty(\"color\", (\"red !important\")!) 2`] = `

Message:
> 1 | declare const style: CSSStyleDeclaration | undefined; style?.setProperty("color", ("red !important")!)
    |                                                                                   ^^^^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | declare const style: CSSStyleDeclaration | undefined; style?.setProperty("color", ('red')!, 'important')

`;

exports[`no-invalid-style-set-property > invalid(56): document.body.style.setProperty(\"backgroundColor\", \"red\"); 1`] = `

Filename: file.ts

  1 | document.body.style.setProperty("backgroundColor", "red");

`;

exports[`no-invalid-style-set-property > invalid(56): document.body.style.setProperty(\"backgroundColor\", \"red\"); 2`] = `

Message:
> 1 | document.body.style.setProperty("backgroundColor", "red");
    |                                 ^^^^^^^^^^^^^^^^^ Use the CSS property name \`background-color\` instead of \`backgroundColor\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`background-color\`.:
  1 | document.body.style.setProperty('background-color', "red");

`;

exports[`no-invalid-style-set-property > invalid(57): const declaration = document.body.style; declaration.setProperty(\"color\", \"red !important\"); 1`] = `

Filename: file.ts

  1 | const declaration = document.body.style; declaration.setProperty("color", "red !important");

`;

exports[`no-invalid-style-set-property > invalid(57): const declaration = document.body.style; declaration.setProperty(\"color\", \"red !important\"); 2`] = `

Message:
> 1 | const declaration = document.body.style; declaration.setProperty("color", "red !important");
    |                                                                           ^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | const declaration = document.body.style; declaration.setProperty("color", 'red', 'important');

`;

exports[`no-invalid-style-set-property > invalid(58): declare const declaration: CSSStyleProperties; declaration.setProperty(\"color\", \"red\", \"!important\"); 1`] = `

Filename: file.ts

  1 | declare const declaration: CSSStyleProperties; declaration.setProperty("color", "red", "!important");

`;

exports[`no-invalid-style-set-property > invalid(58): declare const declaration: CSSStyleProperties; declaration.setProperty(\"color\", \"red\", \"!important\"); 2`] = `

Message:
> 1 | declare const declaration: CSSStyleProperties; declaration.setProperty("color", "red", "!important");
    |                                                                                        ^^^^^^^^^^^^ The \`setProperty()\` priority must be an empty string or \`important\` (case-insensitive).

Suggestion 1/1: Replace with \`important\`.:
  1 | declare const declaration: CSSStyleProperties; declaration.setProperty("color", "red", 'important');

`;

exports[`no-invalid-style-set-property > invalid(59): declare const declaration: CSSStyleDeclaration | CSSStyleProperties | undefined; declaration?.setProperty(\"backgroundColor\", \"red\"); 1`] = `

Filename: file.ts

  1 | declare const declaration: CSSStyleDeclaration | CSSStyleProperties | undefined; declaration?.setProperty("backgroundColor", "red");

`;

exports[`no-invalid-style-set-property > invalid(59): declare const declaration: CSSStyleDeclaration | CSSStyleProperties | undefined; declaration?.setProperty(\"backgroundColor\", \"red\"); 2`] = `

Message:
> 1 | declare const declaration: CSSStyleDeclaration | CSSStyleProperties | undefined; declaration?.setProperty("backgroundColor", "red");
    |                                                                                                           ^^^^^^^^^^^^^^^^^ Use the CSS property name \`background-color\` instead of \`backgroundColor\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`background-color\`.:
  1 | declare const declaration: CSSStyleDeclaration | CSSStyleProperties | undefined; declaration?.setProperty('background-color', "red");

`;

exports[`no-invalid-style-set-property > invalid(6): style.setProperty(\"MozAppearance\", \"none\") 1`] = `

  1 | style.setProperty("MozAppearance", "none")

`;

exports[`no-invalid-style-set-property > invalid(6): style.setProperty(\"MozAppearance\", \"none\") 2`] = `

Message:
> 1 | style.setProperty("MozAppearance", "none")
    |                   ^^^^^^^^^^^^^^^ Use the CSS property name \`-moz-appearance\` instead of \`MozAppearance\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`-moz-appearance\`.:
  1 | style.setProperty('-moz-appearance', "none")

`;

exports[`no-invalid-style-set-property > invalid(60): style.setProperty(\"webkitFlexDirection\", \"row\") 1`] = `

  1 | style.setProperty("webkitFlexDirection", "row")

`;

exports[`no-invalid-style-set-property > invalid(60): style.setProperty(\"webkitFlexDirection\", \"row\") 2`] = `

Message:
> 1 | style.setProperty("webkitFlexDirection", "row")
    |                   ^^^^^^^^^^^^^^^^^^^^^ Use the CSS property name \`-webkit-flex-direction\` instead of \`webkitFlexDirection\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`-webkit-flex-direction\`.:
  1 | style.setProperty('-webkit-flex-direction', "row")

`;

exports[`no-invalid-style-set-property > invalid(61): style.setProperty(\"WebkitTransitionProperty\", \"color\") 1`] = `

  1 | style.setProperty("WebkitTransitionProperty", "color")

`;

exports[`no-invalid-style-set-property > invalid(61): style.setProperty(\"WebkitTransitionProperty\", \"color\") 2`] = `

Message:
> 1 | style.setProperty("WebkitTransitionProperty", "color")
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^ Use the CSS property name \`-webkit-transition-property\` instead of \`WebkitTransitionProperty\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`-webkit-transition-property\`.:
  1 | style.setProperty('-webkit-transition-property', "color")

`;

exports[`no-invalid-style-set-property > invalid(62): style.setProperty(\"webkitMaskBoxImageOutset\", \"0\") 1`] = `

  1 | style.setProperty("webkitMaskBoxImageOutset", "0")

`;

exports[`no-invalid-style-set-property > invalid(62): style.setProperty(\"webkitMaskBoxImageOutset\", \"0\") 2`] = `

Message:
> 1 | style.setProperty("webkitMaskBoxImageOutset", "0")
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^ Use the CSS property name \`-webkit-mask-box-image-outset\` instead of \`webkitMaskBoxImageOutset\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`-webkit-mask-box-image-outset\`.:
  1 | style.setProperty('-webkit-mask-box-image-outset', "0")

`;

exports[`no-invalid-style-set-property > invalid(63): style.setProperty(\"color\", \"red !important\", (/* keep */ \"\")) 1`] = `

  1 | style.setProperty("color", "red !important", (/* keep */ ""))

`;

exports[`no-invalid-style-set-property > invalid(63): style.setProperty(\"color\", \"red !important\", (/* keep */ \"\")) 2`] = `

Message:
> 1 | style.setProperty("color", "red !important", (/* keep */ ""))
    |                            ^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | style.setProperty("color", 'red', (/* keep */ 'important'))

`;

exports[`no-invalid-style-set-property > invalid(64): style.setProperty(\"--tokens\", \"red/* keep */ !important\") 1`] = `

  1 | style.setProperty("--tokens", "red/* keep */ !important")

`;

exports[`no-invalid-style-set-property > invalid(64): style.setProperty(\"--tokens\", \"red/* keep */ !important\") 2`] = `

Message:
> 1 | style.setProperty("--tokens", "red/* keep */ !important")
    |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | style.setProperty("--tokens", 'red/* keep */', 'important')

`;

exports[`no-invalid-style-set-property > invalid(65): (element?.style)?.setProperty(\"backgroundColor\", \"red\") 1`] = `

  1 | (element?.style)?.setProperty("backgroundColor", "red")

`;

exports[`no-invalid-style-set-property > invalid(65): (element?.style)?.setProperty(\"backgroundColor\", \"red\") 2`] = `

Message:
> 1 | (element?.style)?.setProperty("backgroundColor", "red")
    |                               ^^^^^^^^^^^^^^^^^ Use the CSS property name \`background-color\` instead of \`backgroundColor\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`background-color\`.:
  1 | (element?.style)?.setProperty('background-color', "red")

`;

exports[`no-invalid-style-set-property > invalid(66): (element?.style).setProperty(\"color\", \"red !important\") 1`] = `

  1 | (element?.style).setProperty("color", "red !important")

`;

exports[`no-invalid-style-set-property > invalid(66): (element?.style).setProperty(\"color\", \"red !important\") 2`] = `

Message:
> 1 | (element?.style).setProperty("color", "red !important")
    |                                       ^^^^^^^^^^^^^^^^ Pass \`important\` as the priority argument instead of including \`!important\` in the value.

Suggestion 1/1: Move \`!important\` to the priority argument.:
  1 | (element?.style).setProperty("color", 'red', 'important')

`;

exports[`no-invalid-style-set-property > invalid(67): ((element?.style)!).setProperty(\"color\", \"red\", \"!important\") 1`] = `

  1 | ((element?.style)!).setProperty("color", "red", "!important")

`;

exports[`no-invalid-style-set-property > invalid(67): ((element?.style)!).setProperty(\"color\", \"red\", \"!important\") 2`] = `

Message:
> 1 | ((element?.style)!).setProperty("color", "red", "!important")
    |                                                 ^^^^^^^^^^^^ The \`setProperty()\` priority must be an empty string or \`important\` (case-insensitive).

Suggestion 1/1: Replace with \`important\`.:
  1 | ((element?.style)!).setProperty("color", "red", 'important')

`;

exports[`no-invalid-style-set-property > invalid(7): style.setProperty(\"backgroundColor\", \"\", \"invalid\") 1`] = `

  1 | style.setProperty("backgroundColor", "", "invalid")

`;

exports[`no-invalid-style-set-property > invalid(7): style.setProperty(\"backgroundColor\", \"\", \"invalid\") 2`] = `

Message:
> 1 | style.setProperty("backgroundColor", "", "invalid")
    |                   ^^^^^^^^^^^^^^^^^ Use the CSS property name \`background-color\` instead of \`backgroundColor\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`background-color\`.:
  1 | style.setProperty('background-color', "", "invalid")

`;

exports[`no-invalid-style-set-property > invalid(8): element.style.setProperty(\"backgroundColor\", \"red\") 1`] = `

  1 | element.style.setProperty("backgroundColor", "red")

`;

exports[`no-invalid-style-set-property > invalid(8): element.style.setProperty(\"backgroundColor\", \"red\") 2`] = `

Message:
> 1 | element.style.setProperty("backgroundColor", "red")
    |                           ^^^^^^^^^^^^^^^^^ Use the CSS property name \`background-color\` instead of \`backgroundColor\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`background-color\`.:
  1 | element.style.setProperty('background-color', "red")

`;

exports[`no-invalid-style-set-property > invalid(9): (element.style).setProperty(\"backgroundColor\", \"red\") 1`] = `

  1 | (element.style).setProperty("backgroundColor", "red")

`;

exports[`no-invalid-style-set-property > invalid(9): (element.style).setProperty(\"backgroundColor\", \"red\") 2`] = `

Message:
> 1 | (element.style).setProperty("backgroundColor", "red")
    |                             ^^^^^^^^^^^^^^^^^ Use the CSS property name \`background-color\` instead of \`backgroundColor\` in \`setProperty()\`.

Suggestion 1/1: Replace with \`background-color\`.:
  1 | (element.style).setProperty('background-color', "red")

`;
